# PLplot

./: .cvsignore  .gitattributes  .gitignore  ABOUT  AUTHORS  CHANGES  CMakeLists.txt  COPYRIGHTS  CTestConfig.cmake  CTestCustom.ctest.in  ChangeLog  ChangeLog.release  Changes  Changes.old  Copyright  Doxyfile  FAQ  INSTALL  Installation  Makefile  Makefile-vars  Makefile.am  NEWS  OLD-NEWS  OLD-README.release  OLDER-NEWS  PROBLEMS  README  README.1st  README.PLplot_Contract_Testing  README.Release_Manager_Cookbook  README.cumulated_release  README.dashboard_submissions  README.developers  README.emacs  README.local  README.release  README.testing  Release  SERVICE  (+63 more)
bindings/: CMakeLists.txt  Makefile.am
cf/: .cvsignore  CMakeLists.txt  Makefile.am  README  ac_pkg_swig.m4  ac_python_devel.m4  acinclude.m4  aclocal.m4  aqt.ac  autodeps.in  bootstrap.sh  c++.ac  cgm.ac  clean.in  config.el  configure.in  csiro.ac  cvtdeps  defaults.in  demos.in  deps.in  dist.in  docbook.ac  docbook.m4  double.ac  drivers-finish.ac  drivers-init.ac  drivers-post.ac  drivers-pre.ac  drivers.ac  drivers_linux.in  dyndrv.in  exes.in  f77.ac  f95.ac  freetype.ac  gcw.ac  gd.ac  gnome.ac  gnome.m4  (+64 more)
data/: CMakeLists.txt  Makefile.am  README.shapefiles  cglobe.map  cglobe.shp  cglobe.shx  cmap0_black_on_white.pal  cmap1_blue_red.pal  cmap1_gray.pal  cmap1_lowfreq.pal  cmap1_radar.pal  globe.shp  globe.shx  plstnd5.fnt  plxtnd5.fnt  usa.map  usa.shp  usa.shx  usaglobe.map  usaglobe.shp  usaglobe.shx
doc/: .cvsignore  .indent.pro  CHANGES.old  CMakeLists.txt  Doxyfile.in  Makefile  Makefile.am  NEWS  README.doxygen  Xauthority  abs.txt  advanced.tex  amiga.tex  api.tex  buildinfo.el  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  colors.doc  cplus.tex  dev.tex  dos.tex  dos386.tex  drivers.tex  figpg.tex  figs.tex  fork.txt  gui.tex  intro.tex  lang.tex  linux.tex  macros.tex  makefile  notes.mjl  notes4.99d  notes4.99g  os2.tex  perl.tex  plgchr.txt  (+25 more)
drivers/: .cvsignore  CMakeLists.txt  Makefile.am  README.drivers  README.wxwidgets  aqt.c  cairo.c  cairo.driver_info.in  cairo.rc.in  cgm.c  cgm.rc.in  deprecated_wxwidgets.cpp  deprecated_wxwidgets.h  deprecated_wxwidgets_agg.cpp  deprecated_wxwidgets_dc.cpp  deprecated_wxwidgets_gc.cpp  dg300.c  dispatch.c  dosvga.c  gcw-driver.c  gcw-lib.c  gcw.c  gcw.driver_info.in  gd.c  gd.driver_info.in  gd_png.c  get-drv-info.c  gnome.c  gnusvga.c  hp7470.c  hp7580.c  hpgl.c  hpgl.driver_info.in  impress.c  linuxvga.c  linuxvga.rc.in  ljii.c  ljii.rc.in  ljiip.c  mem.c  (+54 more)
examples/: .cvsignore  CMakeLists.txt  CMakeLists.txt_installed_examples  CMakeLists.txt_installed_examples.in  Chloe.pgm  Makefile.am  Makefile.examples  Makefile.examples.in  README.Chloe  demo01.php  demo02.php  demo03.php  demo04.php  demo05.php  demo06.php  demo07.php  demo08.php  demo09.php  demo10.php  demo11.php  demo12.php  demo13.php  demo15.php  demo16.php  demo18.php  demo19.php  demo20.php  demo21.php  demo22.php  demo23.php  demo24.php  example_head.html  example_page.php  index.html  index.html.in  plplot_configure.cmake_installed_examples.in
fonts/: .cvsignore  CMakeLists.txt  Makefile.am  README  font01.c  font02.c  font03.c  font04.c  font05.c  font06.c  font07.c  font08.c  font09.c  font10.c  font11.c  plhershey-unicode-gen.c  plhershey-unicode.csv  readme  stndfont.c  xtndfont.c
include/: .cvsignore  CMakeLists.txt  Makefile.am  chdr.h  dirent_msvc.h  dispatch.h  disptab.h  drivers.h  gcw.h  gnome-canvas-hacktext.h  ltdl_win32.h  metadefs.h  moc_files.h.in  pdf.h  plConfig.h.cmake  plConfig.h.in  plDevs.h.cmake  plDevs.h.in  plamiga.h  plcore.h  pldebug.h  pldll.h  pldll.h.in  plevent.h  plfci-truetype.h  plfci-type1.h  plfci.h  plfreetype.h  plhershey-unicode.h  plplot.h  plplotP.h  plplotX.h  plplotcanvas-hacktext.h  plplotcanvas.h  plplotio.h  plstream.h  plstrm.h  pltkwd.h  plunicode-type1.h  plxwd.h  (+3 more)
pkgcfg/: .cvsignore  CMakeLists.txt  Makefile.am  README  gen-pc-files.pl.in  gen-pc-files.sh  plplot-double.pc.in  plplot-float.pc.in  plplot-master-pc.in  plplot-template.pc.cmake  plplot-template.pc.in  plplot.pc.in
plplot_test/: CMakeLists.txt  README.developers  plplot-test-interactive.sh.in  plplot-test.sh.cmake  plplot-test.sh.in  test_ada.sh.in  test_c.sh.in  test_c_interactive.sh.in  test_cxx.sh.in  test_d.sh.in  test_diff.sh.in  test_f77.sh.in  test_f95.sh.in  test_fortran.sh.in  test_java.sh.in  test_lua.sh.in  test_ocaml.sh.in  test_octave.sh.in  test_octave_interactive.sh.in  test_pdl.sh.in  test_perl.sh.in  test_plrender.sh.in  test_python.sh.in  test_single_tcl.sh  test_tcl.sh.in
scripts/: .cvsignore  CMakeLists.txt  Makefile.am  MinGW_MSYS_comprehensive_test.sh  check-copyright.pl  check-tarball-cvs.sh  check_api_completeness.sh  check_backwards_incompatible_api.sh  compare.c  compare_svn_repos  comprehensive_test.sh  convert_comment.py  find_commit_date_ranges.sh  fixfort  generate_website.sh  get-dependency-libs.sh  htdocs-gen_plot-examples.sh  htdocs-replace.sh  make-cvs-tarball.sh  make_tarball.sh  make_win_package.bat  mklinks  mkrel  mktclIndex  mktclidx  parity_bit_check.exclude  parity_bit_check.sh  plm2gif  plplot-config.in  plplot_miscdebris_wiki_backup.sh  plplot_wiki_backup.sh  plpr  process-link-line  pstex2eps  remove_trailing_blanks.sh  remove_trailing_whitespace.sh  rm-cvs-tarball-tags.pl  run_examples_windows.bat  style_source.sh  tarup  (+2 more)
src/: .cvsignore  CMakeLists.txt  Makefile.am  README.pages  base.c  convert.c  deprecated_plmap.c  genlin.c  ltdl_win32.c  move.c  mt19937ar.c  mt19937ar.h  pdfutils.c  pladv.c  plaffine.c  plarc.c  plargs.c  plaxes.c  plbeg.c  plbin.c  plbox.c  plbox3.c  plbuf.c  plccal.c  plcntr.c  plcol.c  plconf.c  plcont.c  plcore.c  plctest.c  plctrl.c  plcvt.c  pldeprecated.c  pldtik.c  plend.c  plenv.c  plerr.c  plexit.c  plf2ops.c  plfill.c  (+56 more)
test/: .cvsignore  CMakeLists.txt  Makefile.am  plplot-test.sh.cmake  plplot-test.sh.in  test_ada.sh.in  test_c.sh  test_c.sh.in  test_cxx.sh  test_cxx.sh.in  test_f77.sh  test_f77.sh.in  test_f95.sh.in  test_java.sh  test_java.sh.in  test_octave.sh  test_tcl.sh  (+7 more)
(+3943 files in other folders)
